# ecs

./: .gitignore  CMakeLists.txt  README.md
include/ecs/: component.hpp  ecs.hpp  entity.hpp  system.hpp  world.hpp
src/: ecs.cpp
src/ecs/: entity.cpp  world.cpp
src/utils/: matrix.cpp
