cmake_minimum_required(VERSION 3.10)
project(ECS LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

file(GLOB_RECURSE ECS_SOURCES CONFIGURE_DEPENDS src/*.cpp)
add_library(ECS STATIC ${ECS_SOURCES})
target_include_directories(ECS PUBLIC include)

# output build/lib
set_target_properties(ECS PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
)

